tests/NormalTests/paczka1/small_fuzzy/22428840.err
Error in line 3: WA0LgFU5QDF A427 771,5
Error in line 8: uyQ S421 40,2
